# touche-2025-rad

./: .env.example  .gitignore  .pre-commit-config.yaml  .scratch  Dockerfile  README.md  all-files.txt  app.py  docker-compose.tz.yml  docker-compose.yml  elasticsearch_test_app.py  environment.yaml  pyproject.toml  requirements.in  requirements.txt  run_evals.sh  run_simulations.sh  test_rag_debater.py
Aaryan/localRAG/: rag_back.ipynb
config/: tensorzero.toml  transitions.json
data/: debate_topics.tsv  random_simulations.tsv
demo/: chat_app.py  test_rag_debater.py
docs/: overview.md
evals/: claude-opus-4.jsonl  claude-sonnet-4.jsonl  gemini-2.5-flash-preview-05-20.jsonl  gemini-2.5-pro-preview.jsonl  gpt-4.1.jsonl  gpt-4o.jsonl
evals/base/: base.jsonl  claude-opus-4.jsonl  claude-sonnet-4.jsonl  gemini-2.5-flash-preview-05-20.jsonl  gemini-2.5-pro-preview.jsonl  gpt-4.1.jsonl  gpt-4o.jsonl
notebooks/: evals_analysis.ipynb  simulation_analysis.ipynb
scripts/: draw_state_machine.py  extract_debate_topics.py  gen_sim_params.py  test_evaluate.sh  test_respond.sh
simulations/: base-simulation.jsonl  claude-opus-4-simulation.jsonl  claude-sonnet-4-simulation.jsonl  gemini-2.5-flash-preview-05-20-simulation.jsonl  gemini-2.5-pro-preview-simulation.jsonl  gpt-4.1-simulation.jsonl  gpt-4o-simulation.jsonl
submission/: Dockerfile  README.md  docker-compose.yml  main.py  proxy.py  pyproject.toml  reference.py  requirements.txt  sample-config.json  start.sh  submit-debate.sh  submit-evaluation.sh
submission/base/: Dockerfile  proxy.py  pyproject.toml  start.sh
submission/base-eval/: Dockerfile  proxy.py  requirements.txt
submission/claude-opus-4/: Dockerfile
submission/claude-sonnet-4/: Dockerfile
submission/gemini-2.5-flash-preview-05-20/: Dockerfile
submission/gemini-2.5-pro-preview/: Dockerfile
submission/gpt-4.1/: Dockerfile
submission/gpt-4o/: Dockerfile
templates/: eval.md.j2  prompt.md.j2
tests/: conftest.py  test_spark.py
touche_rad/: load_data.py  load_embeddings.py  streamlit.py
(+45 files in other folders)
